third_party/rust/rayon-0.8.2/tests/compile-fail/no_send_par_iter.rs
extern
crate
rayon
;
use
rayon
:
:
prelude
:
:
*
;
use
std
:
:
ptr
:
:
null
;
#
[
derive
(
Copy
Clone
)
]
struct
NoSend
(
*
const
(
)
)
;
unsafe
impl
Sync
for
NoSend
{
}
fn
main
(
)
{
let
x
=
Some
(
NoSend
(
null
(
)
)
)
;
x
.
par_iter
(
)
.
map
(
|
&
x
|
x
)
.
count
(
)
;
x
.
par_iter
(
)
.
filter_map
(
|
&
x
|
Some
(
x
)
)
.
count
(
)
;
x
.
par_iter
(
)
.
cloned
(
)
.
count
(
)
;
}
